--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "axios": "^0.27.2",
+    "formidable": "^2.0.1",
+    "multer": "^1.4.4",
     "next": "12.1.6",
+    "next-connect": "^0.12.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.51.0"
