--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.6.4",
     "axios": "^0.27.2",
     "formidable": "^2.0.1",
+    "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "mv": "^2.1.1",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
     "react": "18.1.0",
